# PostgresCourseWork

./: .env_example  Makefile  README.md  db_user_interact.py  fill_up_db.py  main.py  pyproject.toml  requirements.txt  settings.py  setup_db.py
DTO/: dto.py
api/: headhunter.py
credentials/: db.py
database/: config.py  fill_up_db.py  manager.py
database/db_create/: setup.py
database/setub_db/: create_db.py
database/sql_scripts/: create_tables.sql  get_avg_salary.sql  get_company_and_vacancies_count.sql
